k8s/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: paperless
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: webserver
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: paperless
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: paperless
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: broker
